Se agregan validaciones para que los nombres de ciudad y ruta sean alfanumericos